docs: add architecture and build tool video links